Homepage fixes on smaller screens

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1441,6 +1441,12 @@ li {
   background: $homepage-special;
   padding: 30px 2% 36px 2%  ;
   text-align: center;
+
+  @media only screen and (max-width: 479px) {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
   .icon-home {
     width: 200px;
     margin: 0 20px;
@@ -1662,6 +1668,10 @@ li {
           font-size: 32px;
           line-height: 45px;
           @include box-shadow(0px 4px 0px 9px $dark_slate);
+
+          @media only screen and (max-width: 479px) {
+            font-size: 26px;
+          }
 
           .ss-navigateright {
             margin-left: 5px;
@@ -1953,14 +1963,16 @@ li {
           line-height: 60px;
         }
         a, .no-link {
-          font-size: 24px;
-          line-height: 45px;
+          font-size: 20px;
+          line-height: 41px;
           @include box-shadow(0px 4px 0px 9px $dark_slate);
           .ss-navigateright {
             margin-left: 5px;
             font-size: 18px;
             color: $fancy_blue;
             background: none;
+            position: relative;
+            top: 3px;
           }
           &:hover {
             color: $fancy_blue;
